--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "shopify-app-node",
+  "name": "shopify-node-app",
   "version": "1.0.0",
   "description": "Shopify's node app for CLI tool",
   "scripts": {
@@ -10,12 +10,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Shopify/shopify-app-node.git"
+    "url": "git+https://github.com/Shopify/shopify-node-app.git"
   },
   "author": "Shopify Inc.",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/shopify/shopify-app-node/issues"
+    "url": "https://github.com/shopify/shopify-node-app/issues"
   },
   "dependencies": {
     "@babel/core": "7.12.3",
@@ -53,7 +53,7 @@
     "enzyme": "3.11.0",
     "enzyme-adapter-react-16": "1.15.5",
     "husky": "^4.0.7",
-    "jest": "26.6.1",
+    "jest": "26.6.2",
     "lint-staged": "^10.0.1",
     "nodemon": "^2.0.0",
     "prettier": "2.0.2",
