--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "shopify-node-app",
+  "name": "shopify-app-node",
   "version": "1.0.0",
   "description": "Shopify's node app for CLI tool",
   "scripts": {
@@ -10,12 +10,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Shopify/shopify-node-app.git"
+    "url": "git+https://github.com/Shopify/shopify-app-node.git"
   },
   "author": "Shopify Inc.",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/shopify/shopify-node-app/issues"
+    "url": "https://github.com/shopify/shopify-app-node/issues"
   },
   "dependencies": {
     "@babel/core": "7.12.3",
@@ -36,9 +36,9 @@
     "isomorphic-fetch": "^3.0.0",
     "js-cookie": "^2.2.1",
     "koa": "^2.8.2",
-    "koa-router": "^9.0.4",
+    "koa-router": "^10.0.0",
     "koa-session": "^6.0.0",
-    "next": "^9.3.2",
+    "next": "^10.0.0",
     "next-env": "^1.1.0",
     "node-fetch": "^2.6.1",
     "react": "^16.10.1",
@@ -48,15 +48,15 @@
   "devDependencies": {
     "@babel/plugin-transform-runtime": "^7.6.2",
     "@babel/preset-stage-3": "^7.0.0",
-    "babel-jest": "26.6.1",
+    "babel-jest": "26.6.2",
     "babel-register": "^6.26.0",
     "enzyme": "3.11.0",
     "enzyme-adapter-react-16": "1.15.5",
     "husky": "^4.0.7",
-    "jest": "26.6.1",
+    "jest": "26.6.2",
     "lint-staged": "^10.0.1",
     "nodemon": "^2.0.0",
-    "prettier": "2.0.2",
+    "prettier": "2.1.2",
     "react-addons-test-utils": "15.6.2",
     "react-test-renderer": "16.14.0"
   },
